
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* desc; } ;


 int printf (char*,...) ;
 TYPE_1__* targets ;

void usage(char *prog)
{
 int n;

 printf("Usage: %s host target\n\nAvailable Targets:\n", prog);

 for (n = 0 ; targets[n].desc != ((void*)0) ; n++)
    printf ("%3d | %s\n", n + 1, targets[n].desc);
 printf ("    \n");
}
